--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,7 +1,13 @@
 - if @restaurants.any?
  - @restaurants.each do |restaurant|
-  %h2= restaurant.name
+  = link_to restaurant.name, restaurant_path(restaurant)
+  %h2= restaurant.description
+  = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
+  = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
+  = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
+  - if restaurant.reviews.any?
+   %p= restaurant.reviews.first.thoughts
 - else
  %h1 No restaurants yet!
 
-%a(href='#') Add a restaurant
+= link_to "Add a restaurant", new_restaurant_url
